--- a/app/src/main/res/drawable/rounded_button_background.xml
+++ b/app/src/main/res/drawable/rounded_button_background.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#ebeff1"/> <!-- this one is ths color of the Rounded Button -->
-    <stroke android:width="1px" android:color="#979797" />
-    <corners
-        android:radius="20dp"
-        android:bottomLeftRadius="20dp"
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/rounded_btn_active" android:state_enabled="true" android:state_pressed="true" />
+    <item android:drawable="@drawable/rounded_btn_normal" android:state_enabled="true" />
+</selector>
