--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -99,7 +99,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
-                android:foreground="?attr/selectableItemBackground"/>
+                android:background="@drawable/rounded_button_background"/>
 
         </FrameLayout>
 
@@ -123,6 +123,7 @@
             android:background="?attr/selectableItemBackground"
             android:gravity="start|center"
             android:maxLength="30"
+            android:textAllCaps="false"
             android:paddingEnd="5dp"
             android:paddingStart="5dp"
             android:text="@string/back_to_login"
