--- a/app/src/main/res/values/dims.xml
+++ b/app/src/main/res/values/dims.xml
@@ -3,4 +3,6 @@
     <dimen name="regLogMarginSidesSmall">70dp</dimen>
     <dimen name="regLogMarginSidesNormal">90dp</dimen>
     <dimen name="regLogMarginTop">25dp</dimen>
+
+    <dimen name="item_image_min_height">150dp</dimen>
 </resources>
